--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
