--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
+    "icons": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "razorpay": "^2.9.5",
