--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.2.1",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "icons": "^1.0.0",
